--- a/contact.html
+++ b/contact.html
@@ -21,49 +21,35 @@
     <link rel="stylesheet" href="css/icomoon.css">
     <link rel="stylesheet" href="css/style.css">
   </head>
-  <body>
 
-    <div class="container pt-5">
-			<div class="row justify-content-between">
-				<div class="col">
-					<a class="navbar-brand" href="index.html">Home<span>builder.</span></a>
-				</div>
-				<div class="col d-flex justify-content-end">
-					<div class="social-media">
-		    		<p class="mb-0 d-flex">
-		    			<a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-facebook"><i class="sr-only">Facebook</i></span></a>
-		    			<a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-twitter"><i class="sr-only">Twitter</i></span></a>
-		    			<a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-instagram"><i class="sr-only">Instagram</i></span></a>
-		    			<a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-dribbble"><i class="sr-only">Dribbble</i></span></a>
-		    		</p>
-	        </div>
-				</div>
+	<body><div class="container pt-5">
+		<div class="row justify-content-between">
+			<div class="col">
+				<a class="navbar-brand" href="index.html">Constru<span>Mart.</span></a>
 			</div>
 		</div>
-		<nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
-	    <div class="container">
-	    
-	      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
-	        <span class="fa fa-bars"></span> Menu
-	      </button>
-				<form action="#" class="searchform order-lg-last">
-          <div class="form-group d-flex">
-            <input type="text" class="form-control pl-3" placeholder="Search">
-            <button type="submit" placeholder="" class="form-control search"><span class="fa fa-search"></span></button>
-          </div>
-        </form>
-	      <div class="collapse navbar-collapse" id="ftco-nav">
-	        <ul class="navbar-nav mr-auto">
-	        	<li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
-	        	<li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
-	        	<li class="nav-item"><a href="team.html" class="nav-link">Our team</a></li>
-	        	<li class="nav-item"><a href="project.html" class="nav-link">Project</a></li>
-	        	<li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
-	          <li class="nav-item active"><a href="contact.html" class="nav-link">Contact</a></li>
-	        </ul>
-	      </div>
-	    </div>
-	  </nav>
+	</div>
+	<nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
+	<div class="container">
+
+	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
+		<span class="fa fa-bars"></span> Menu
+	</button>
+			<form action="#" class="searchform order-lg-last">
+	<div class="form-group d-flex">
+		<input type="text" class="form-control pl-3" placeholder="Search">
+		<button type="submit" placeholder="" class="form-control search"><span class="fa fa-search"></span></button>
+	</div>
+	</form>
+	<div class="collapse navbar-collapse" id="ftco-nav">
+		<ul class="navbar-nav mr-auto">
+			<li class="nav-item active"><a href="index.html" class="nav-link">Inicio</a></li>
+			<li class="nav-item"><a href="about.html" class="nav-link">Arriendo</a></li>
+		<li class="nav-item"><a href="contact.html" class="nav-link">Contacto</a></li>
+		</ul>
+	</div>
+	</div>
+	</nav>
     <!-- END nav -->
 
     <section class="hero-wrap hero-wrap-2" style="background-image: url('images/bg_3.jpg');" data-stellar-background-ratio="0.5">
@@ -71,8 +57,8 @@
       <div class="container">
         <div class="row no-gutters slider-text align-items-end">
           <div class="col-md-9 ftco-animate pb-5">
-          	<p class="breadcrumbs mb-2"><span class="mr-2"><a href="index.html">Home <i class="ion-ios-arrow-forward"></i></a></span> <span>Contact <i class="ion-ios-arrow-forward"></i></span></p>
-            <h1 class="mb-0 bread">Contact us</h1>
+          	<p class="breadcrumbs mb-2"><span class="mr-2"><a href="index.html">Inicio<i class="ion-ios-arrow-forward"></i></a></span> <span>Contacto <i class="ion-ios-arrow-forward"></i></span></p>
+            <h1 class="mb-0 bread">Contacto</h1>
           </div>
         </div>
       </div>
@@ -86,40 +72,40 @@
 							<div class="row no-gutters mb-5">
 								<div class="col-md-7">
 									<div class="contact-wrap w-100 p-md-5 p-4">
-										<h3 class="mb-4">Contact Us</h3>
+										<h3 class="mb-4">Contacto</h3>
 										<div id="form-message-warning" class="mb-4"></div> 
-					      		<div id="form-message-success" class="mb-4">
-					            Your message was sent, thank you!
-					      		</div>
+											<div id="form-message-success" class="mb-4">
+											Tú mensaje será enviado, Gracias
+											</div>
 										<form method="POST" id="contactForm" name="contactForm" class="contactForm">
 											<div class="row">
 												<div class="col-md-6">
 													<div class="form-group">
-														<label class="label" for="name">Full Name</label>
-														<input type="text" class="form-control" name="name" id="name" placeholder="Name">
+														<label class="label" for="name">Nombre Completo</label>
+														<input type="text" class="form-control" name="name" id="nombre" placeholder="Nombre">
 													</div>
 												</div>
 												<div class="col-md-6"> 
 													<div class="form-group">
-														<label class="label" for="email">Email Address</label>
+														<label class="label" for="email">Correo Electronico</label>
 														<input type="email" class="form-control" name="email" id="email" placeholder="Email">
 													</div>
 												</div>
 												<div class="col-md-12">
 													<div class="form-group">
-														<label class="label" for="subject">Subject</label>
-														<input type="text" class="form-control" name="subject" id="subject" placeholder="Subject">
+														<label class="label" for="subject">Asunto</label>
+														<input type="text" class="form-control" name="subject" id="asunto" placeholder="Asunto">
 													</div>
 												</div>
 												<div class="col-md-12">
 													<div class="form-group">
-														<label class="label" for="#">Message</label>
-														<textarea name="message" class="form-control" id="message" cols="30" rows="4" placeholder="Message"></textarea>
+														<label class="label" for="#">Mensaje</label>
+														<textarea name="message" class="form-control" id="mensaje" cols="30" rows="4" placeholder="Mensaje"></textarea>
 													</div>
 												</div>
 												<div class="col-md-12">
 													<div class="form-group">
-														<input type="submit" value="Send Message" class="btn btn-primary">
+														<input type="submit" value="Enviar Mensaje" class="btn btn-primary">
 														<div class="submitting"></div>
 													</div>
 												</div>
@@ -127,120 +113,46 @@
 										</form>
 									</div>
 								</div>
-								<div class="col-md-5 d-flex align-items-stretch">
-									<div id="map">
 				          </div>
-								</div>
-							</div>
-							<div class="row">
-								<div class="col-md-3">
-									<div class="dbox w-100 text-center">
-				        		<div class="icon d-flex align-items-center justify-content-center">
-				        			<span class="fa fa-map-marker"></span>
-				        		</div>
-				        		<div class="text">
-					            <p><span>Address:</span> 198 West 21th Street, Suite 721 New York NY 10016</p>
-					          </div>
-				          </div>
-								</div>
-								<div class="col-md-3">
-									<div class="dbox w-100 text-center">
-				        		<div class="icon d-flex align-items-center justify-content-center">
-				        			<span class="fa fa-phone"></span>
-				        		</div>
-				        		<div class="text">
-					            <p><span>Phone:</span> <a href="tel://1234567920">+ 1235 2355 98</a></p>
-					          </div>
-				          </div>
-								</div>
-								<div class="col-md-3">
-									<div class="dbox w-100 text-center">
-				        		<div class="icon d-flex align-items-center justify-content-center">
-				        			<span class="fa fa-paper-plane"></span>
-				        		</div>
-				        		<div class="text">
-					            <p><span>Email:</span> <a href="mailto:info@yoursite.com">info@yoursite.com</a></p>
-					          </div>
-				          </div>
-								</div>
-								<div class="col-md-3">
-									<div class="dbox w-100 text-center">
-				        		<div class="icon d-flex align-items-center justify-content-center">
-				        			<span class="fa fa-globe"></span>
-				        		</div>
-				        		<div class="text">
-					            <p><span>Website</span> <a href="#">yoursite.com</a></p>
-					          </div>
-				          </div>
-								</div>
-							</div>
 						</div>
-					</div>
-				</div>
-    	</div>
-    </section>
-
-    <footer class="footer">
-			<div class="container-fluid px-lg-5">
-				<div class="row">
-					<div class="col-md-9 py-5">
-						<div class="row">
-							<div class="col-md-4 mb-md-0 mb-4">
-								<h2 class="footer-heading">About us</h2>
-								<p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
-								<ul class="ftco-footer-social p-0">
-		              <li class="ftco-animate"><a href="#" data-toggle="tooltip" data-placement="top" title="Twitter"><span class="ion-logo-twitter"></span></a></li>
-		              <li class="ftco-animate"><a href="#" data-toggle="tooltip" data-placement="top" title="Facebook"><span class="ion-logo-facebook"></span></a></li>
-		              <li class="ftco-animate"><a href="#" data-toggle="tooltip" data-placement="top" title="Instagram"><span class="ion-logo-instagram"></span></a></li>
-		            </ul>
-							</div>
-							<div class="col-md-8">
-								<div class="row justify-content-center">
-									<div class="col-md-12 col-lg-10">
-										<div class="row">
-											<div class="col-md-4 mb-md-0 mb-4">
-												<h2 class="footer-heading">Services</h2>
-												<ul class="list-unstyled">
-						              <li><a href="#" class="py-1 d-block">Construction</a></li>
-						              <li><a href="#" class="py-1 d-block">House Renovation</a></li>
-						              <li><a href="#" class="py-1 d-block">Painting</a></li>
-						              <li><a href="#" class="py-1 d-block">Arhictecture Design</a></li>
-						            </ul>
-											</div>
-											<div class="col-md-4 mb-md-0 mb-4">
-												<h2 class="footer-heading">About</h2>
-												<ul class="list-unstyled">
-						              <li><a href="#" class="py-1 d-block">Staff</a></li>
-						              <li><a href="#" class="py-1 d-block">Team</a></li>
-						              <li><a href="#" class="py-1 d-block">Careers</a></li>
-						              <li><a href="#" class="py-1 d-block">Blog</a></li>
-						            </ul>
-											</div>
-											<div class="col-md-4 mb-md-0 mb-4">
-												<h2 class="footer-heading">Resources</h2>
-												<ul class="list-unstyled">
-						              <li><a href="#" class="py-1 d-block">Security</a></li>
-						              <li><a href="#" class="py-1 d-block">Global</a></li>
-						              <li><a href="#" class="py-1 d-block">Charts</a></li>
-						              <li><a href="#" class="py-1 d-block">Privacy</a></li>
-						            </ul>
-											</div>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="row mt-md-5">
-							<div class="col-md-12">
-								<p class="copyright"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-					  Copyright &copy;<script>document.write(new Date().getFullYear());</script> </i> by <a href="https://ubiobio.cl" target="_blank">UBB</a>
-					  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
-							</div>
-						</div>
-					</div>
+				    </div>
 				</div>
 			</div>
-		</footer>
+			
+		<div class="row">
+			<div class="col-md-3">
+				<div class="dbox w-100 text-center">
+			<div class="icon d-flex align-items-center justify-content-center">
+				<span class="fa fa-map-marker"></span>
+			</div>
+			<div class="text">
+			<p><span>Dirección:</span> Ecuador #599, Chillán</p>
+		</div>
+
+		</div>
+		</div>
+		<div class="col-md-3">
+			<div class="dbox w-100 text-center">
+		<div class="icon d-flex align-items-center justify-content-center">
+			<span class="fa fa-phone"></span>
+		</div>
+		<div class="text">
+		<p><span>Fono</span> <a>+569 12345678</a></p>
+		</div>
+	</section>
+	
+	<section>
+	</section>
+
+    <footer class="footer">
+		<div class="row mt-md-5">
+			<div class="col-md-12">
+		<p class="copyright" style="text-align: center;">
+		  Copyright &copy;<script>document.write(new Date().getFullYear());</script>  <i class="ion-ios-heart" aria-hidden="true"></i>  <a href="https://ubiobio.cl" target="_blank">UBB</a>
+		  </p>
+			</div>
+		</div>
+	</footer>
     
   
 
