--- a/contact.html
+++ b/contact.html
@@ -43,11 +43,25 @@
 	</form>
 	<div class="collapse navbar-collapse" id="ftco-nav">
 		<ul class="navbar-nav mr-auto">
-			<li class="nav-item active"><a href="index.html" class="nav-link">Inicio</a></li>
-			<li class="nav-item"><a href="about.html" class="nav-link">Arriendo</a></li>
-		<li class="nav-item"><a href="contact.html" class="nav-link">Contacto</a></li>
+			<li class="nav-item"><a href="index.html" class="nav-link">Inicio</a></li>
+
+			<li class="nav-item dropdown">
+				<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+				  Arriendo Herramientas
+				</a>
+				<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink"  style="background-color: orange">
+					<a class="dropdown-item" href="#">Aseo</a>
+					<a class="dropdown-item" href="#">Demolición</a>
+					<a class="dropdown-item" href="#">Electricas</a>
+					<a class="dropdown-item" href="#">Jardin</a>
+					<a class="dropdown-item" href="#">Varias</a>
+					<a class="dropdown-item" href="#">Pavimentación</a>
+				</div>
+			  </li>
+
+			  <li class="nav-item  active"><a href="contact.html" class="nav-link">Contacto</a></li>
 		</ul>
-	</div>
+	  </div>
 	</div>
 	</nav>
     <!-- END nav -->
