--- a/login.html
+++ b/login.html
@@ -11,23 +11,35 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/js/all.min.js" crossorigin="anonymous"></script>
     </head>
     <body class="bg-primary">
-        <div id="layoutAuthentication">
+        <SCRIPT  language=JavaScript> 
+        function go(){
+
+            if (document.form.password.value=='CONTRASEÑA' && document.form.login.value=='USUARIO'){ 
+                    document.form.submit(); 
+                } 
+                else{ 
+                     alert("Porfavor ingrese, nombre de usuario y contraseña correctos."); 
+                } 
+            } 
+            </SCRIPT>
+
+         <div id="layoutAuthentication">
             <div id="layoutAuthentication_content">
                 <main>
                     <div class="container">
                         <div class="row justify-content-center">
                             <div class="col-lg-5">
                                 <div class="card shadow-lg border-0 rounded-lg mt-5">
-                                    <div class="card-header"><h3 class="text-center font-weight-light my-4">Login Arriendo Herramientas</h3></div>
+                                    <div class="card-header"><h3 class="text-center font-weight-light my-4" ">Login Arriendo Herramientas</h3></div>
                                     <div class="card-body">
-                                        <form>
+                                        <form name=form action="index.html">
                                             <div class="form-group">
-                                                <label class="small mb-1" for="inputEmailAddress">Correo Electronico</label>
-                                                <input class="form-control py-4" id="inputEmailAddress" type="email" placeholder="Ingrese Email" />
+                                                <label class="small mb-1" for="text">Correo Electronico</label>
+                                                <input class="form-control py-4" id="inputEmailAddress" type="text" placeholder="Ingrese Email" name="login" />
                                             </div>
                                             <div class="form-group">
                                                 <label class="small mb-1" for="inputPassword">Contraseña</label>
-                                                <input class="form-control py-4" id="inputPassword" type="password" placeholder="Ingrese Contraseña" />
+                                                <input class="form-control py-4" id="inputPassword" type="password" placeholder="Ingrese Contraseña" name="password"/>
                                             </div>
                                             <div class="form-group">
                                                 <div class="custom-control custom-checkbox">
@@ -36,8 +48,8 @@
                                                 </div>
                                             </div>
                                             <div class="form-group d-flex align-items-center justify-content-between mt-4 mb-0">
-                                                <!--<a class="small" href="password.html">Forgot Password?</a> -->
-                                                <a class="btn btn-primary" href="index.html">Login</a>
+                                               <!-- <a class="small" href="password.html">Forgot Password?</a> XDDDDD -->
+                                               <INPUT class="btn btn-primary" onclick=go() type=button value=Acceder>
                                             </div>
                                         </form>
                                     </div>
@@ -51,18 +63,10 @@
                 </main>
             </div>
         </div>
-        <br>
-        <footer class="footer">
-            <div class="row mt-md-5">
-                <div class="col-md-12">
-            <p class="copyright" style="text-align: center;">
-              Copyright &copy;<script>document.write(new Date().getFullYear());</script>  <i class="ion-ios-heart" aria-hidden="true"></i>  <a href="https://ubiobio.cl" target="_blank">UBB</a>
-              </p>
-                </div>
-            </div>
-        </footer>
+        
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
         <script src="js/scripts.js"></script>
     </body>
+    
 </html>
