--- a/login.html
+++ b/login.html
@@ -14,7 +14,7 @@
         <SCRIPT  language=JavaScript> 
         function go(){
 
-            if (document.form.password.value=='CONTRASEÑA' && document.form.login.value=='USUARIO'){ 
+            if (document.form.password.value=='admin' && document.form.login.value=='password'){ 
                     document.form.submit(); 
                 } 
                 else{ 
@@ -22,7 +22,6 @@
                 } 
             } 
             </SCRIPT>
-
          <div id="layoutAuthentication">
             <div id="layoutAuthentication_content">
                 <main>
@@ -63,6 +62,16 @@
                 </main>
             </div>
         </div>
+        <br>
+        <footer class="footer">
+			<div class="row mt-md-5">
+				<div class="col-md-12">
+			<p class="copyright" style="text-align: center;">
+		  	Copyright &copy;<script>document.write(new Date().getFullYear());</script>  <i class="ion-ios-heart" aria-hidden="true"></i>  <a href="https://ubiobio.cl" target="_blank">UBB</a>
+		  	</p>
+				</div>
+			</div>
+		</footer>
         
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
