--- a/aseo.html
+++ b/aseo.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Home Builder - Free Bootstrap 4 Template by Colorlib</title>
+    <title>Arriendo herramientas - Aseo</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
@@ -24,22 +24,12 @@
   <body>
 
     <div class="container pt-5">
-			<div class="row justify-content-between">
-				<div class="col">
-					<a class="navbar-brand" href="index.html">Home<span>builder.</span></a>
-				</div>
-				<div class="col d-flex justify-content-end">
-					<div class="social-media">
-		    		<p class="mb-0 d-flex">
-		    			<a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-facebook"><i class="sr-only">Facebook</i></span></a>
-		    			<a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-twitter"><i class="sr-only">Twitter</i></span></a>
-		    			<a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-instagram"><i class="sr-only">Instagram</i></span></a>
-		    			<a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-dribbble"><i class="sr-only">Dribbble</i></span></a>
-		    		</p>
-	        </div>
-				</div>
-			</div>
-		</div>
+        <div class="row justify-content-between">
+            <div class="col">
+                <a class="navbar-brand" href="index.html">Constru<span>Mart.</span></a>
+            </div>
+        </div>
+    </div>
 		<nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
 	    <div class="container">
 	    
