vistas arriendo, modificaccion otras vistas

--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
 					</a>
 					<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink"  style="background-color: orange">
 						<a class="dropdown-item" href="aseo.html">Aseo</a>
-						<a class="dropdown-item" href="#">Demolición</a>
-						<a class="dropdown-item" href="#">Electricas</a>
-						<a class="dropdown-item" href="#">Jardin</a>
-						<a class="dropdown-item" href="#">Varias</a>
-						<a class="dropdown-item" href="#">Pavimentación</a>
+						<a class="dropdown-item" href="demolicion.html">Demolición</a>
+						<a class="dropdown-item" href="electricas.html">Electricas</a>
+						<a class="dropdown-item" href="jardin.html">Jardin</a>
+						<a class="dropdown-item" href="varias.html">Varias</a>
+						<a class="dropdown-item" href="pavimentacion.html">Pavimentación</a>
 					</div>
 				  </li>
 				  <li class="nav-item"><a href="contact.html" class="nav-link">Contacto</a></li>
