--- a/demolicion.html
+++ b/demolicion.html
@@ -73,76 +73,72 @@
         <div class="row no-gutters slider-text align-items-end">
           <div class="col-md-9 ftco-animate pb-5">
           	<p class="breadcrumbs mb-2"><span class="mr-2"><a href="index.html">Inicio <i class="ion-ios-arrow-forward"></i></a></span> <span>Arriendo herramientas <i class="ion-ios-arrow-forward"></i></span></p>
-            <h1 class="mb-0 bread">Aseo</h1>
+            <h1 class="mb-0 bread">Demolición</h1>
           </div>
         </div>
       </div>
     </section>
-    
-    <br>   	
-    <br>   	
-    <br>   	
-
+   	
     <section class="ftco-section ftco-no-pt ftco-no-pb">
 		  <div class="container-fluid px-md-0">
         <div class="row no-gutters">
           <div class="col-md-4 ftco-animate">
-            <div class="work img d-flex align-items-end" style="background-image: url(images/aseo-1.jpg);">
+            <div class="work img d-flex align-items-end" style="background-image: url(images/dem-1.jpg);">
             	<div class="desc w-100 px-4">
 	              <div class="text w-100 mb-3">
 	              	<span>Herramienta</span>
-	              	<h2><a href="arriendo.html">Aspiradora industrial polvo agua</a></h2>
+	              	<h2><a href="arriendo.html">Compresor hidráulico</a></h2>
 	              </div>
               </div>
             </div>
           </div>
           <div class="col-md-4 ftco-animate">
-            <div class="work img d-flex align-items-end" style="background-image: url(images/aseo-2.jpg);">
+            <div class="work img d-flex align-items-end" style="background-image: url(images/dem-2.jpg);">
             	<div class="desc w-100 px-4">
 	              <div class="text w-100 mb-3">
 	              	<span>Herramienta</span>
-	              	<h2><a href="arriendo.html">Barredora polvo manual</a></h2>
+	              	<h2><a href="arriendo.html">Compresor neumático 185 CFM</a></h2>
 	              </div>
               </div>
             </div>
           </div>
           <div class="col-md-4 ftco-animate">
-            <div class="work img d-flex align-items-end" style="background-image: url(images/aseo-3.jpg);">
+            <div class="work img d-flex align-items-end" style="background-image: url(images/dem-3.jpg);">
             	<div class="desc w-100 px-4">
 	              <div class="text w-100 mb-3">
 	              	<span>Herramienta</span>
-	              	<h2><a href="arriendo.html">Hidrolavadora 220</a></h2>
+	              	<h2><a href="arriendo.html">Cincelador Bosch</a></h2>
 	              </div>
               </div>
             </div>
           </div>
 
           <div class="col-md-4 ftco-animate">
-            <div class="work img d-flex align-items-end" style="background-image: url(images/aseo-4.jpg);">
+            <div class="work img d-flex align-items-end" style="background-image: url(images/dem-4.jpg);">
             	<div class="desc w-100 px-4">
 	              <div class="text w-100 mb-3">
 	              	<span>Herramienta</span>
-	              	<h2><a href="arriendo.html">Hidrolavadora trifasica</a></h2>
+	              	<h2><a href="arriendo.html">Cincelador Hilti</a></h2>
 	              </div>
               </div>
             </div>
           </div>
           <div class="col-md-4 ftco-animate">
-            <div class="work img d-flex align-items-end" style="background-image: url(images/aseo-5.jpg);">
+            <div class="work img d-flex align-items-end" style="background-image: url(images/dem-5.jpg);">
             	<div class="desc w-100 px-4">
 	              <div class="text w-100 mb-3">
 	              	<span>Herramienta</span>
-	              	<h2><a href="arriendo.html">Lavadora industrial</a></h2>
+	              	<h2><a href="arriendo.html">Demoledor Bosch 10 kgs.</a></h2>
 	              </div>
               </div>
             </div>
           </div>
           <div class="col-md-4 ftco-animate">
-            <div class="work img d-flex align-items-end" style="background-image: url(images/aseo-6.jpg);">
+            <div class="work img d-flex align-items-end" style="background-image: url(images/dem-6.jpg);">
             	<div class="desc w-100 px-4">
 	              <div class="text w-100 mb-3">
 	              	<span>Herramienta</span>
-	              	<h2><a href="arriendo.html">Vacuolavadora</a></h2>
+	              	<h2><a href="arriendo.html">Demoledor Bosch 16 kgs.</a></h2>
 	              </div>
               </div>
             </div>
