modificacion nav vistas arriendos

--- a/aseo.html
+++ b/aseo.html
@@ -33,37 +33,41 @@
 		<nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
 	    <div class="container">
 	    
-	      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
-	        <span class="fa fa-bars"></span> Menu
-	      </button>
-				<form action="#" class="searchform order-lg-last">
-          <div class="form-group d-flex">
-            <input type="text" class="form-control pl-3" placeholder="Search">
-            <button type="submit" placeholder="" class="form-control search"><span class="fa fa-search"></span></button>
-          </div>
-        </form>
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="fa fa-bars"></span> Menu
+			</button>
+		<form action="#" class="searchform order-lg-last">
+			<div class="form-group d-flex">
+				<input type="text" class="form-control pl-3" placeholder="Search">
+				<button type="submit" placeholder="" class="form-control search"><span class="fa fa-search"></span></button>
+			</div>
+		</form>
+		
 	      <div class="collapse navbar-collapse" id="ftco-nav">
 	        <ul class="navbar-nav mr-auto">
-                <li class="nav-item"><a href="index.html" class="nav-link">Inicio</a></li>
+				<li class="nav-item active"><a href="index.html" class="nav-link">Inicio</a></li>
 
-                <li class="nav-item active dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                      Arriendo Herramientas
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink"  style="background-color: orange">
-                      <a class="dropdown-item" href="aseo.html">Aseo</a>
-                      <a class="dropdown-item" href="demolicion.html">Demolición</a>
-                      <a class="dropdown-item" href="electricas.html">Electricas</a>
-                      <a class="dropdown-item" href="jardin.html">Jardin</a>
-                      <a class="dropdown-item" href="varias.html">Varias</a>
-                      <a class="dropdown-item" href="pavimentacion.html">Pavimentación</a>
-                    </div>
-                  </li>
-    
-                  <li class="nav-item"><a href="contact.html" class="nav-link">Contacto</a></li>
+				<li class="nav-item dropdown">
+					<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+					  Arriendo Herramientas
+					</a>
+					<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink"  style="background-color: orange">
+						<a class="dropdown-item" href="aseo.html">Aseo</a>
+						<a class="dropdown-item" href="demolicion.html">Demolición</a>
+						<a class="dropdown-item" href="electricas.html">Electricas</a>
+						<a class="dropdown-item" href="jardin.html">Jardin</a>
+						<a class="dropdown-item" href="varias.html">Varias</a>
+						<a class="dropdown-item" href="pavimentacion.html">Pavimentación</a>
+					</div>
+				  </li>
+				  <li class="nav-item"><a href="contact.html" class="nav-link">Contacto</a></li>
+				  <li class="nav-item"><a href="inicio_Administrador.html" class="nav-link">Ir Vista Admin</a></li>
 	        </ul>
-	      </div>
-	    </div>
+		  </div>
+		</div>
+		<ul class="navbar-nav mr-auto">
+			<li class="nav-item"><a href="login.html" class="nav-link">Login</a></li> 
+		 </ul>
 	  </nav>
     <!-- END nav -->
 
