--- a/inicio_Administrador.html
+++ b/inicio_Administrador.html
@@ -41,7 +41,7 @@
                 <li class="nav-item active"><a href="inicio_Administrador.html" class="nav-link">Inicio</a></li>
                 <li class="nav-item "><a href="#" class="nav-link">Clientes</a></li>
                 <li class="nav-item "><a href="herramientas.html" class="nav-link">Herramientas</a></li>
-                <li class="nav-item "><a href="inicio_Administrador.html" class="nav-link">Reportes</a></li>
+                <li class="nav-item "><a href="#" class="nav-link">Reportes</a></li>
                 <li class="nav-item "><a href="index.html" class="nav-link">Vista Cliente</a></li>
 	        </ul>
           </div>
