--- a/login.html
+++ b/login.html
@@ -29,7 +29,7 @@
                         <div class="row justify-content-center">
                             <div class="col-lg-5">
                                 <div class="card shadow-lg border-0 rounded-lg mt-5">
-                                    <div class="card-header"><h3 class="text-center font-weight-light my-4" ">Login Arriendo Herramientas</h3></div>
+                                    <div class="card-header"><h3 class="text-center font-weight-light my-4">Login Arriendo Herramientas</h3></div>
                                     <div class="card-body">
                                         <form name=form action="index.html">
                                             <div class="form-group">
