--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
 	<body>
 		<SCRIPT  language=JavaScript> 
 			function enviar(){
-				alert("Mensaje Enviado"); 
+				alert("Formulario Enviado"); 
 
 			}
 		</SCRIPT><div class="container pt-5">
