--- a/herramientas.html
+++ b/herramientas.html
@@ -44,9 +44,9 @@
         </form>
 	      <div class="collapse navbar-collapse" id="ftco-nav">
 	        <ul class="navbar-nav mr-auto">
-                <li class="nav-item active"><a href="inicio_Administrador.html" class="nav-link">Inicio</a></li>
-                <li class="nav-item "><a href="#" class="nav-link">Clientes</a></li>
-                <li class="nav-item "><a href="herramientas.html" class="nav-link">Herramientas</a></li>
+                <li class="nav-item "><a href="inicio_Administrador.html" class="nav-link">Inicio</a></li>
+                <li class="nav-item "><a href="cliente.html" class="nav-link">Clientes</a></li>
+                <li class="nav-item active"><a href="herramientas.html" class="nav-link">Herramientas</a></li>
                 <li class="nav-item "><a href="#" class="nav-link">Reportes</a></li>
                 <li class="nav-item "><a href="index.html" class="nav-link">Vista Cliente</a></li>
 	        </ul>
@@ -143,7 +143,6 @@
         <div class="row no-gutters">
           <div class="col-md-4 ftco-animate">
             <div class="work img d-flex align-items-end" style="background-image: url(images/image_8.jpg);">
-            	<a href="images/image_8.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
 	    					<span class="icon-expand"></span>
 	    				</a>
             	<div class="desc w-100 px-4">
@@ -156,7 +155,6 @@
           </div>
           <div class="col-md-4 ftco-animate">
             <div class="work img d-flex align-items-end" style="background-image: url(images/image_9.jpg);">
-            	<a href="images/image_9.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
 	    					<span class="icon-expand"></span>
 	    				</a>
             	<div class="desc w-100 px-4">
@@ -169,7 +167,6 @@
           </div>
           <div class="col-md-4 ftco-animate">
             <div class="work img d-flex align-items-end" style="background-image: url(images/image_10.jpg);">
-            	<a href="images/image_10.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
 	    					<span class="icon-expand"></span>
 	    				</a>
             	<div class="desc w-100 px-4">
