actualizacion footer header

--- a/electricas.html
+++ b/electricas.html
@@ -26,7 +26,7 @@
     <div class="container pt-5">
         <div class="row justify-content-between">
             <div class="col">
-                <a class="navbar-brand" href="index.html">Constru<span>Mart.</span></a>
+                <a class="navbar-brand" href="index.html">Rent<span>Tools.</span></a>
             </div>
         </div>
     </div>
@@ -177,11 +177,11 @@
             <button id="cerrar" class="btn btn-primary">Cerrar</button>
           </dialog>
 
-        <footer class="footer">
+          <footer class="footer">
 			<div class="row mt-md-5">
 				<div class="col-md-12">
 			<p class="copyright" style="text-align: center;">
-		  	Copyright &copy;<script>document.write(new Date().getFullYear());</script>  <i class="ion-ios-heart" aria-hidden="true"></i>  <a href="https://ubiobio.cl" target="_blank">UBB</a>
+		  	Copyright &copy;<script>document.write(new Date().getFullYear());</script>   <a href="#" target="_blank">RentTools S.A</a>
 		  	</p>
 				</div>
 			</div>
